k8s/overlays/rbb-crc/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onboarding
  namespace: onboarding
spec:
  template:
    spec:
      containers:
      - name: onboarding
        image: "docker.io/robertbartlettbaron/acct-mgt.x86:latest"
        volumeMounts:
          - name: auth-vol
            mountPath: /app/auth
            readOnly: true
      volumes:
        - name: auth-vol
          secret:
            secretName: basic-auth
