k8s/overlays/rbb-crc/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: onboarding
spec:
  host: acct-mgt.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: onboarding
